# AlphaProMega-Air

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Energy Flow & Orchestration Architecture  LEGAL_IP_CONSENT_LETTER.md  LEGAL_NOTES.md  LEGAL_REGULATION_21_CONSENT_LETTER.md  LEGAL_REGULATION_21_CONSENT_LETTER_OFFICIAL_TEMPLATE_FILLED.md  LICENSE  NON_PROFIT_AVIATION_FOUNDATIONS_DOSSIER.md  OPEN_SOURCE_AVIATION_PROJECTS_DOSSIER.md  PREDICTION_MARKETS_CLIMATE_TECH_DOSSIER.md  PREDICTION_MARKETS_FUSION_DOSSIER.md  PREDICTION_MARKETS_POST_QUANTUM_DOSSIER.md  PREDICTION_MARKETS_QUANTUM_DOSSIER.md  PREDICTION_MARKETS_RENEWABLES_DOSSIER.md  PREDICTION_MARKETS_SPACEFLIGHT_DOSSIER.md  PURPOSES_STATEMENT.md  README.md  SUSTAINABLE_AVIATION_FUELS_DOSSIER.md  TECHNICAL_MANIFESTO.md
.github/workflows/: ci.yml
NEXi/: UNIVERSAL_GOVERNANCE_DOSSIER.md
crates/futarchy_aviation/: Cargo.toml
crates/futarchy_aviation/src/: lib.rs
crates/futarchy_belief_markets/: Cargo.toml
crates/futarchy_belief_markets/src/: lib.rs
crates/mercy_adaptive_ecc_selector/: Cargo.toml
crates/mercy_advanced_entanglement_navigation/: Cargo.toml
crates/mercy_advantage2_hybrid_optimizer/: Cargo.toml
crates/mercy_afc/: Cargo.toml
crates/mercy_air_traffic_control/: Cargo.toml
crates/mercy_air_traffic_control/src/: lib.rs
crates/mercy_airframe/: Cargo.toml
crates/mercy_airframe_propulsion/: Cargo.toml
crates/mercy_alcubierre/: Cargo.toml
crates/mercy_alcubierre/src/: lib.rs
crates/mercy_alcubierre_drive/: Cargo.toml
crates/mercy_alcubierre_drive/src/: lib.rs
crates/mercy_annealing_optimizer/: Cargo.toml
crates/mercy_antimatter_lattice/: Cargo.toml
crates/mercy_antimatter_production/: Cargo.toml
crates/mercy_antimatter_production/src/: lib.rs
crates/mercy_antimatter_propulsion/: Cargo.toml
crates/mercy_antimatter_propulsion/src/: lib.rs
crates/mercy_antimatter_storage/: Cargo.toml
crates/mercy_antimatter_storage/src/: lib.rs
crates/mercy_autopilot/: Cargo.toml
crates/mercy_autopilot/src/: lib.rs
crates/mercy_autopilot_agi/: Cargo.toml
crates/mercy_avionics/: Cargo.toml
crates/mercy_avionics/src/: lib.rs
crates/mercy_avionics_integration/: Cargo.toml
crates/mercy_avionics_redundancy/: Cargo.toml
crates/mercy_battery_supercapacitor/: Cargo.toml
crates/mercy_bec_analogs/: Cargo.toml
crates/mercy_bec_analogs/src/: lib.rs
crates/mercy_beccs/: Cargo.toml
crates/mercy_beccs/src/: lib.rs
crates/mercy_bimodal_nep/: Cargo.toml
crates/mercy_bimodal_nep/src/: lib.rs
crates/mercy_biochar/: Cargo.toml
crates/mercy_biochar/src/: lib.rs
crates/mercy_biojet/: Cargo.toml
crates/mercy_biojet/src/: fenca_valence.rs  lib.rs
crates/mercy_blue_carbon/: Cargo.toml
crates/mercy_blue_carbon/src/: lib.rs
crates/mercy_bosonic_cat_codes/: Cargo.toml
crates/mercy_bosonic_quantum_computing/: Cargo.toml
crates/mercy_bosonic_quantum_supremacy/: Cargo.toml
crates/mercy_carbon_capture/: Cargo.toml
crates/mercy_carbon_capture/src/: lib.rs
crates/mercy_casimir_effect_derivations/: Cargo.toml
crates/mercy_cold_gas_acs/: Cargo.toml
crates/mercy_debris_mitigation/: Cargo.toml
crates/mercy_debris_tracking/: Cargo.toml
crates/mercy_drone_biofuels/: Cargo.toml
crates/mercy_drone_biofuels/src/: lib.rs
crates/mercy_drone_fleet/: Cargo.toml
crates/mercy_drone_fleet/src/: lib.rs
crates/mercy_drone_swarm/: Cargo.toml
crates/mercy_drone_swarm/src/: lib.rs
crates/mercy_enhanced_weathering/: Cargo.toml
crates/mercy_enhanced_weathering/src/: lib.rs
crates/mercy_exotic_matter_analogs/: Cargo.toml
crates/mercy_exotic_matter_analogs/src/: lib.rs
crates/mercy_flight_agi/: Cargo.toml
crates/mercy_flight_agi/src/: lib.rs
crates/mercy_fuel_cell/: Cargo.toml
crates/mercy_fuel_cell/src/: lib.rs
crates/mercy_fusion_propulsion/: Cargo.toml
crates/mercy_fusion_propulsion/src/: lib.rs
crates/mercy_ground_control/: Cargo.toml
crates/mercy_ground_control/src/: lib.rs
crates/mercy_hawking_analogs/: Cargo.toml
crates/mercy_hawking_analogs/src/: lib.rs
crates/mercy_hybrid_propulsion/: Cargo.toml
crates/mercy_hybrid_propulsion/src/: lib.rs
crates/mercy_hybrid_vasimir_raptor/: Cargo.toml
crates/mercy_hybrid_vasimir_raptor/src/: lib.rs
docs/: ADVANCED_SELF_HEALING_CHEMISTRY_BLUEPRINT.md  ALKALINE_FUEL_CELLS_BLUEPRINT.md  AVIATION_BLUEPRINT_HISTORY_BLUEPRINT.md  AVIATION_BLUEPRINT_INTEGRATION.md  AVIATION_BLUEPRINT_VISUAL.md  AVIATION_GOVERNANCE_PRINCIPLES.md  BIOCHAR_CARBON_SEQUESTRATION_BLUEPRINT.md  BIOENERGY_WITH_CCS_BLUEPRINT.md  BLUE_CARBON_ECOSYSTEMS_BLUEPRINT.md  BOSE_EINSTEIN_CONDENSATE_ANALOGS_BLUEPRINT.md  DETAILED_AIRCRAFT_SCHEMATICS.md  DIRECT_AIR_CAPTURE_TECH_BLUEPRINT.md  DIVINE_ASPECTS_BLUEPRINT.md  ELECTRIC_AIRCRAFT_PROPULSION_BLUEPRINT.md  ENHANCED_WEATHERING_CARBON_REMOVAL_BLUEPRINT.md  EXOTIC_MATTER_ANALOGS_BLUEPRINT.md  FLUID_DUMB_HOLE_ANALOGS_BLUEPRINT.md  HAWKING_RADIATION_ANALOGS_BLUEPRINT.md  HYBRID_ELECTRIC_SAF_PROPULSION_BLUEPRINT.md  HYBRID_THRUST_TEST_SIMULATION.md  HYDROGEN_FUEL_CELLS_BLUEPRINT.md  HYDROGEN_HYBRID_PROPULSION_BLUEPRINT.md  HYDROGEN_PRODUCTION_BLUEPRINT.md  HYDROGEN_STORAGE_BLUEPRINT.md  MCFC_FUEL_CELLS_BLUEPRINT.md  MERCYAIRFRAME_SCHEMATICS_INTEGRATED.md  MERCYAIRFRAME_SELF_HEALING_BLUEPRINT.md  MERCYAIRFRAME_STRUCTURAL_DESIGN_BLUEPRINT.md  MERCYALCUBIERRE_BLUEPRINT.md  MERCYALCUBIERRE_DRIVE_BLUEPRINT.md  MERCYANTIMATTER_LATTICE_BLUEPRINT.md  MERCYANTIMATTER_PRODUCTION_BLUEPRINT.md  MERCYANTIMATTER_PROPULSION_BLUEPRINT.md  MERCYANTIMATTER_STORAGE_BLUEPRINT.md  MERCYAUTOPILOT_AGI_BLUEPRINT.md  MERCYBIMODAL_NEP_BLUEPRINT.md  MERCYBIOJET_INTEGRATION_BLUEPRINT.md  MERCYBIOJET_PRODUCTION_BLUEPRINT.md  MERCYCARBONCAPTURE_BLUEPRINT.md  MERCYDRONEAGI_COORDINATION_BLUEPRINT.md  (+31 more)
examples/: alpha_flight.rs
licenses/: ALPHAPROMEGA-AIR-FOUNDATION-GRANT-LICENSE.md  ETERNAL-MERCY-FLOW-COMMERCIAL-LICENSING-AGREEMENT-v2026.1.md  ETERNAL-MERCY-FLOW-COMMERCIAL-LICENSING-AGREEMENT.md
tests/: full_system_simulation.rs  hybrid_ntp_fusion_antimatter_stack.rs  hybrid_thrust_simulation.rs
(+231 files in other folders)
