[workspace]
members = [
    "crates/nexi",
    "crates/mercy_hydrogen_storage",
    "crates/mercy_electric_propulsion",
    "crates/mercy_hybrid_propulsion",
    "crates/mercy_solar_power",
    "crates/mercy_battery_supercapacitor",
    "crates/mercy_power_management",
    "crates/mercy_thermal_management",
    "crates/mercy_waste_heat_recovery",
    "crates/mercy_cryogenic_cooling",
    "crates/mercy_superconducting_propulsion",
    "crates/mercy_cryogenic_hydrogen_storage",
    "crates/mercy_zero_boil_off",
    "crates/mercy_methalox_cryogenic_storage",
    "crates/mercy_raptor_thrust",
    "crates/mercy_starship_reusability",
    "crates/mercy_starlink_comms",
    "crates/mercy_starlink_latency_optimizer",
    "crates/mercy_inter_satellite_laser_link",
    "crates/mercy_laser_mesh_routing",
    "crates/mercy_quantum_secure_isl",
    "crates/mercy_hybrid_quantum_classical",
    "crates/mercy_entanglement_qkd",
    "crates/mercy_quantum_repeater_isl",
    "crates/mercy_quantum_teleportation",
    "crates/mercy_quantum_entanglement_routing",
    "crates/mercy_system_orchestrator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Eternally-Thriving-Grandmasterism/AlphaProMega-Air"
description = "Hyper-Divine eternal thriving aviation lattice — Rust implementation"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
