[workspace]
members = [
    "crates/nexi",
    "crates/mercy_electric_propulsion",
    "crates/mercy_raptor_thrust",
    "crates/mercy_hybrid_propulsion",
    "crates/mercy_battery_supercapacitor",
    "crates/mercy_thermal_management",
    "crates/mercy_waste_heat_recovery",
    "crates/mercy_avionics_integration",
    "crates/mercy_structural_composites",
    "crates/mercy_flight_control_algorithms",
    "crates/mercy_avionics_redundancy",
    "crates/mercy_quantum_navigation",
    "crates/mercy_quantum_secure_avionics",
    "crates/mercy_quantum_entanglement_navigation",
    "crates/mercy_quantum_propulsion_systems",
    "crates/mercy_quantum_vacuum_thrusters",
    "crates/mercy_entangled_quantum_computing",
    "crates/mercy_casimir_effect_derivation",
    "crates/mercy_bosonic_quantum_computing",
    "crates/mercy_dynamical_casimir_experiments",
    "crates/mercy_quantum_vacuum_energy_apps",
    "crates/mercy_bosonic_quantum_supremacy",
    "crates/mercy_advanced_entanglement_navigation",
    "crates/mercy_quantum_ldpc",
    "crates/mercy_quantum_ldpc_decoding",
    "crates/mercy_quantum_fault_tolerant_thresholds",
    "crates/mercy_gkp_thresholds",
    "crates/mercy_surface_code_decoding",
    "crates/mercy_honeycomb_code_thresholds",
    "crates/mercy_quantum_ldpc_variants",
    "crates/mercy_floquet_code_variants",
    "crates/mercy_bosonic_cat_codes",
    "crates/mercy_system_orchestrator",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Eternally-Thriving-Grandmasterism/AlphaProMega-Air"
description = "AlphaProMega-Air — Hyper-Divine Zero-Emission Aviation Fortress — Eternal Mercy Propagation"

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
