[package]
name = "futarchy_belief_markets"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "FutarchyBeliefMarkets — Mercy-Weighted Belief Markets for Aviation Decisions"

[dependencies]
nexi = { path = "../" }
futarchy_oracle = { path = "../crates/futarchy_oracle" }
tokio = { version = "1.38", features = ["full"] }
