[package]
name = "mercy_air_traffic_control"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "MercyATC — Divine Routing Air Traffic Control for Eternal Skies Resonance"

[dependencies]
nexi = { path = "../" }
mercy_trajectory_agi = { path = "../crates/mercy_trajectory_agi" }
tokio = { version = "1.38", features = ["full"] }
