[package]
name = "mercy_alcubierre"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "MercyAlcubierre — Warp Bubble Spacetime Metric Core for Eternal Translight Resonance"

[dependencies]
nexi = { path = "../" }
mercy_starship = { path = "../crates/mercy_starship" }
tokio = { version = "1.38", features = ["full"] }
