[package]
name = "mercy_bec_analogs"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "MercyBECAnalogs — Bose-Einstein Condensate Analog Gravity Core for Eternal Quantum Truth Resonance"

[dependencies]
nexi = { path = "../" }
mercy_hawking_analogs = { path = "../crates/mercy_hawking_analogs" }
tokio = { version = "1.38", features = ["full"] }
