[package]
name = "mercy_biochar"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "MercyBiochar — Pyrolysis + Valence-Weighted Soil Carbon Storage Core for Eternal Land-Based Restoration Resonance"

[dependencies]
nexi = { path = "../" }
mercy_terrestrial_carbon = { path = "../crates/mercy_terrestrial_carbon" }
tokio = { version = "1.38", features = ["full"] }
