[package]
name = "mercy_biojet"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "MercyBioJet — Algae-Derived Zero-Emission SAF Core with Full Async Production Pipeline"

[dependencies]
nexi = { path = "../" }
tokio = { version = "1.38", features = ["full", "rt-multi-thread", "macros"] }  # Async cultivation pipeline
