[package]
name = "mercy_blue_carbon"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "MercyBlueCarbon — Mangroves + Seagrasses + Salt Marshes Restoration Core for Eternal Ocean Carbon Resonance"

[dependencies]
nexi = { path = "../" }
mercy_ocean_carbon = { path = "../crates/mercy_ocean_carbon" }
tokio = { version = "1.38", features = ["full"] }
