[package]
name = "mercy_drone_fleet"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "MercyDroneFleet — Divine Fleet Management for Eternal Drone Resonance"

[dependencies]
nexi = { path = "../" }
mercy_swarm_coordination = { path = "../crates/mercy_swarm_coordination" }
tokio = { version = "1.38", features = ["full"] }
