[package]
name = "mercy_drone_swarm"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "MercyDroneSwarm — Autonomous Drone Swarm AGI for Eternal Resonance"

[dependencies]
nexi = { path = "../" }
mercy_flight_agi = { path = "../crates/mercy_flight_agi" }
tokio = { version = "1.38", features = ["full"] }
